Fix spacing on outline with new page margins

--- a/styles/designs/carnival/parts/_chapterintro-components.scss
+++ b/styles/designs/carnival/parts/_chapterintro-components.scss
@@ -125,7 +125,7 @@ $ChapterSplashMedia: (
             position: absolute,
             height: 100%,
             width: 8.5in, /* stylelint-disable-line meowtec/no-px */
-            margin-left: -0.75in, /* stylelint-disable-line meowtec/no-px */
+            margin-left: -1in, /* stylelint-disable-line meowtec/no-px */
             z-index: -1,
             box-sizing: border-box,
             padding: inherit,
