--- a/styles/output/chemistry-pdf.css
+++ b/styles/output/chemistry-pdf.css
@@ -588,7 +588,7 @@
   position: absolute;
   height: 100%;
   width: 8.5in;
-  margin-left: -0.75in;
+  margin-left: -1in;
   z-index: -1;
   box-sizing: border-box;
   padding: inherit;
@@ -615,7 +615,7 @@
   position: absolute;
   height: 100%;
   width: 8.5in;
-  margin-left: -0.75in;
+  margin-left: -1in;
   z-index: -1;
   box-sizing: border-box;
   padding: inherit;
